[gray] 20/03/2025
[white] - Fully revamped map: Precursory Riveer
- Revamped environment of maps: Scouting Party, Forking Pathways, Serorjoen Mountains, Collier Chamber, Ice Spikes, Waterfall

[gray] 13/03/2025
[white] - Fully revamped tutorial map: Landing Ground
- Added new environment tiles and blocks
- Added sectors and geographical maps of Neoulandia menu
- Added update checking to the update button
- Fixed the team colour of destructible ice

[gray] 03/03/2025
[white] - Balanced turrets: creneau, machicoulis, parapet, redoubt, tour
- Balanced walls: barrier, platinum wall, adaptive wall
- Balanced units: Harfang, Snapdragon, Boechera, Fireweed, Trillium, Praetor, Heavy Strix
- Updated Large Storage Unit sprite
- Reordered Nickel and Platinum to be in line with other base materials
- Revamped environment of map: Ice Spikes

[gray] 21/02/2025
[white] - Added new map: Collier Chamber
- Added update and changelog menu buttons on title screen
- Added new blocks: Capsule Launcher and Mining Core
- Added new unit: Aedile

- Changed Neoulandia to allow starting loadouts (Start with more resources)
- Revamped map Serorjoen Mountains to use the new underground core.
- Buffed Passage
- Nerfed Loading Dockyard
- Buffed Colony Core and Frontline Core by lowering costs
- Buffed Oil Generator (Serpulo)

[gray] 11/02/2025
[white] - Timber (EDT) is now a required dependency
Existing timber in cores or containers will be deleted; timber can still be acquired through breaking trees.

Added 20 blocks, 3 items, 2 units, and 1 map:
- Added greater ore, elite research materials, nickel, and platinum
- Adds greater extractor and mineral purifier
- Adds slag melter and smeltery
- Adds loading dockyard (T2), platinum conveyor, platinum bridge, platinum junction and router.s
- Adds research consortium, mender, nickel battery, platinum walls, incinerator
- Adds turrets: battlement, loophole, machiolation, redoubt
- Adds map: Waterfall
- Adds units: Freight and Heavy Strix
