@@ -57,8 +57,8 @@ sector.etigeox-emiss3-5.name = Waterfall
 sector.etigeox-emiss3-5.description = [gold]Economic Mission: Waterfalls\n\n[white]New and rarer resources have been detected in this sector. This will aid you in acquiring newer technology.
 sector.etigeox-emiss3-4.name = Collier Chamber
 sector.etigeox-emiss3-4.description = [gold]Economic Mission: Waterfalls\n\n[white]Find your way to the southern end of the caverns and establish a zone of control.
-sector.etigeox-emiss3-6.name = Mirrored Assault B
-sector.etigeox-emiss3-6.description = [gold]Attack Mission: Mirorred Assault\n\n[white]The enemy has a well-hidden base deep in the icebergs. Their east side is currently under assault, and you will be tasked with finding and assaulting the base from the west side.
+sector.etigeox-emiss3-6.name = Shrouded Assault
+sector.etigeox-emiss3-6.description = [gold]Attack Mission: Shrouded Assault\n\n[white]The enemy has a well-hidden base deep in the icebergs. Their east side is currently under assault, and you will be tasked with finding and assaulting the base from the west side.
 
 
 ## Sector Text
