@@ -1,0 +1,5 @@
+{
+  "localizedName": "Dark Void",
+  "type": "StaticWall",
+  "variants": 0
+}
